# r-fubon-neo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.static  README.md  build.rs  docker-compose.override.yml  docker-compose.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: app.yml
docs/: API.md  DEVELOPMENT.md  DOCKER.md
examples/: README.md  basic_trading.rs  market_data_rest.rs  market_data_websocket.rs
monitoring/: prometheus.yml
scripts/: docker-build.sh  docker-run.sh
src/: constants.rs  error.rs  lib.rs  main.rs  sdk.rs  types.rs
src/market_data/: mod.rs  rest.rs  websocket.rs
